tests/integration/pilot/testdata/a-with-tls-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b
spec:
  gateways:
    - bookinfo-gateway-b
  hosts:
    - b
  http:
    # (This 'match' clause started as a work-around, because WaitUntilCallable() times out if
    # all destinations have a subset.  We are now using it for testing.)
    - match:
        - headers:
            end-user:
              exact: jason
      route:
        - destination:
            host: b
    # Fallthrough
    - route:
        - destination:
            host: b
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: b
spec:
  host: b
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway-b
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - b
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: ingress-cert
        mode: SIMPLE
