tests/integration/pilot/testdata/authz-a.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-policy
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: [ "*" ]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-policy
spec:
  action: DENY
  rules:
    - to:
        - operation:
            methods: [ "*" ]
    - to:
        - operation:
            methods: [ "*" ]
---
