tests/integration/pilot/testdata/b-with-tls-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b
spec:
  gateways:
    - gateway
  hosts:
    - b
  http:
    # (This 'match' clause started as a work-around, because WaitUntilCallable() times out if
    # all destinations have a subset.  We are now using it for testing.)
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: b
    # Fallthrough
    - route:
        - destination:
            host: b
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: b
spec:
  host: b
  subsets:
    - name: v1
      labels:
        version: v1
---
# Make sure listener has a least one listener, otherwise there may be no policies
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: "ingressgateway"
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: ingress-cert
