tests/integration/pilot/testdata/clustertrustbundle-injection.yaml
apiVersion: certificates.k8s.io/v1beta1
kind: ClusterTrustBundle
metadata:
  name: test-bundle
spec:
  signerName: example.com/signer
  trustBundle: |
    -----BEGIN CERTIFICATE-----
    MIIDCTCCAfGgAwIBAgIUMDIk9EGP0COllfPAsPPgLTXWB7owDQYJKoZIhvcNAQEL
[...]
    7UTWTG2dbrSQzDm7kQ==
    -----END CERTIFICATE-----
---
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: {{ .Namespace }}
  labels:
    app: test-app
spec:
  selector:
    app: test-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: {{ .Namespace }}
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: busybox
          command: ["sleep", "3600"]
          ports:
            - containerPort: 8080
