tests/integration/pilot/testdata/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-dns-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-dns
      version: v1
  template:
    metadata:
      labels:
        app: kube-dns
        version: v1
    spec:
      containers:
      - name: kube-dns
        image: k8s.gcr.io/k8s-dns-kube-dns-amd64:1.14.13
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 53
