tests/integration/pilot/testdata/external-forward-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-forward-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-forward-proxy
  template:
    metadata:
      labels:
        app: external-forward-proxy
    spec:
      { { if not .OpenShift } }
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
      { { end } }
      containers:
        - name: external-forward-proxy
          image: envoyproxy/envoy:v1.21.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: external-forward-proxy-config
              mountPath: /etc/envoy
      volumes:
        - name: external-forward-proxy-config
          configMap:
            name: external-forward-proxy-config
