tests/integration/pilot/testdata/jwtclaimroute.yaml
# The following virtual service should cause the warning IST0149 because it uses JWT claim based routing but does not
# specify gateways.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bar
spec:
  hosts:
  - "bar.com"
  gateways:
  - mesh
  http:
  - match:
    - uri:
        prefix: /
      headers:
        x-jwt-claim.bar:
          exact: bar
    route:
    - destination:
        host: istiod.istio-system.svc.cluster.local
        port:
          number: 15010
---
# The following virtual service should cause the warning IST0150 because it uses JWT claim based routing but there is
# no request authentication applied on the gateway.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo
spec:
  hosts:
  - "foo.com"
  gateways:
  - foo-gateway
  http:
  - match:
    - uri:
        prefix: /
      headers:
        x-jwt-claim.foo:
          exact: foo
    route:
    - destination:
        host: istiod.istio-system.svc.cluster.local
        port:
          number: 15010
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: foo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "foo.com"
