tests/integration/pilot/testdata/nodes.yaml
apiVersion: v1
kind: Node
metadata:
  annotations:
    container.googleapis.com/instance_id: "2787417306096525587"
    node.alpha.kubernetes.io/ttl: "0"
    volumes.kubernetes.io/controller-managed-attach-detach: "true"
  creationTimestamp: 2018-10-05T19:40:48Z
  labels:
    beta.kubernetes.io/arch: amd64
    beta.kubernetes.io/fluentd-ds-ready: "true"
    beta.kubernetes.io/instance-type: n1-standard-4
    beta.kubernetes.io/os: linux
    cloud.google.com/gke-nodepool: default-pool
    cloud.google.com/gke-os-distribution: cos
    failure-domain.beta.kubernetes.io/region: us-central1
    failure-domain.beta.kubernetes.io/zone: us-central1-a
    kubernetes.io/hostname: gke-istio-test-default-pool-866a0405-420r
  name: gke-istio-test-default-pool-866a0405-420r
  resourceVersion: "64030398"
  selfLink: /api/v1/nodes/gke-istio-test-default-pool-866a0405-420r
  uid: 8f63dfef-c8d6-11e8-8901-42010a800278
spec:
  externalID: "1929748586650271976"
  podCIDR: 10.40.0.0/24
  providerID: gce://nathanmittler-istio-test/us-central1-a/gke-istio-test-default-pool-866a0405-420r
status:
  addresses:
    - address: 10.128.0.4
      type: InternalIP
    - address: 35.238.214.129
      type: ExternalIP
    - address: gke-istio-test-default-pool-866a0405-420r
      type: Hostname
  allocatable:
    cpu: 3920m
    ephemeral-storage: "47093746742"
    hugepages-2Mi: "0"
    memory: 12699980Ki
    pods: "110"
  capacity:
    cpu: "4"
    ephemeral-storage: 98868448Ki
    hugepages-2Mi: "0"
    memory: 15399244Ki
    pods: "110"
  conditions:
    - lastHeartbeatTime: 2019-01-30T17:33:09Z
      lastTransitionTime: 2018-12-03T17:00:58Z
      message: node is functioning properly
      reason: UnregisterNetDevice
      status: "False"
      type: FrequentUnregisterNetDevice
    - lastHeartbeatTime: 2019-01-30T17:33:09Z
      lastTransitionTime: 2018-12-03T16:55:56Z
      message: kernel has no deadlock
      reason: KernelHasNoDeadlock
      status: "False"
      type: KernelDeadlock
    - lastHeartbeatTime: 2018-10-05T19:40:58Z
      lastTransitionTime: 2018-10-05T19:40:58Z
      message: RouteController created a route
      reason: RouteCreated
      status: "False"
      type: NetworkUnavailable
    - lastHeartbeatTime: 2019-01-30T17:33:52Z
      lastTransitionTime: 2018-12-03T16:55:57Z
      message: kubelet has sufficient disk space available
      reason: KubeletHasSufficientDisk
      status: "False"
      type: OutOfDisk
    - lastHeartbeatTime: 2019-01-30T17:33:52Z
      lastTransitionTime: 2018-12-03T16:55:57Z
      message: kubelet has sufficient memory available
      reason: KubeletHasSufficientMemory
      status: "False"
      type: MemoryPressure
    - lastHeartbeatTime: 2019-01-30T17:33:52Z
      lastTransitionTime: 2018-12-03T16:55:57Z
      message: kubelet has no disk pressure
      reason: KubeletHasNoDiskPressure
      status: "False"
      type: DiskPressure
    - lastHeartbeatTime: 2019-01-30T17:33:52Z
      lastTransitionTime: 2018-10-05T19:40:48Z
      message: kubelet has sufficient PID available
      reason: KubeletHasSufficientPID
      status: "False"
      type: PIDPressure
    - lastHeartbeatTime: 2019-01-30T17:33:52Z
      lastTransitionTime: 2018-12-03T16:56:07Z
      message: kubelet is posting ready status. AppArmor enabled
      reason: KubeletReady
      status: "True"
      type: Ready
  daemonEndpoints:
    kubeletEndpoint:
      Port: 10250
  images:
    - names:
        - gcr.io/stackdriver-agents/stackdriver-logging-agent@sha256:a33f69d0034fdce835a1eb7df8a051ea74323f3fc30d911bbd2e3f2aef09fc93
        - gcr.io/stackdriver-agents/stackdriver-logging-agent:0.3-1.5.34-1-k8s-1
      sizeBytes: 554981103
    - names:
        - istio/examples-bookinfo-reviews-v2@sha256:d2483dcb235b27309680177726e4e86905d66e47facaf1d57ed590b2bf95c8ad
        - istio/examples-bookinfo-reviews-v2:1.9.0
      sizeBytes: 525074812
    - names:
        - istio/examples-bookinfo-reviews-v1@sha256:920d46b3c526376b28b90d0e895ca7682d36132e6338301fcbcd567ef81bde05
        - istio/examples-bookinfo-reviews-v1:1.9.0
      sizeBytes: 525074812
    - names:
        - istio/examples-bookinfo-reviews-v3@sha256:8c0385f0ca799e655d8770b52cb4618ba54e8966a0734ab1aeb6e8b14e171a3b
        - istio/examples-bookinfo-reviews-v3:1.9.0
      sizeBytes: 525074812
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:8cea2c055dd3d3ab78f99584256efcc1cff7d8ddbed11cded404e9d164235502
      sizeBytes: 448337138
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:23a52850819d5196d66e8e20f4f63f314f779716f830e1d109ad0e24b1f0df43
      sizeBytes: 446407220
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:fc1f957cfa26673768be8fa865066f730f22fde98a6e80654d00f755a643b507
      sizeBytes: 446407220
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:9949bc22667ef88e54ae91700a64bf1459e8c14ed92b870b7ec2f630e14cf3c1
      sizeBytes: 446407220
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:e338c2c5cbc379db24c5b2d67a4acc9cca9a069c2927217fca0ce7cbc582d312
      sizeBytes: 446398900
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:039dbddf8498eff82b25b04cd35c81c4f3e350a1c34e1b128bb0199d6e7d4f98
        - gcr.io/nathanmittler-istio-test/proxyv2:latest
      sizeBytes: 368758526
    - names:
        - gcr.io/istio-release/proxyv2@sha256:dec972eab4f46c974feec1563ea484ad4995edf55ea91d42e148c5db04b3d4d2
        - gcr.io/istio-release/proxyv2:master-latest-daily
      sizeBytes: 353271308
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:cb4a29362ff9014bf1d96e0ce2bb6337bf034908bb4a8d48af0628a4d8d64413
      sizeBytes: 344543156
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:9d502fd29961bc3464f7906ac0e86b07edf01cf4892352ef780e55b3525fb0b8
      sizeBytes: 344257154
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:3f4115cd8c26a17f6bf8ea49f1ff5b875382bda5a6d46281c70c886e802666b0
      sizeBytes: 344257154
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:cdd2f527b4bd392b533d2d0e62c257c19d5a35a6b5fc3512aa327c560866aec1
      sizeBytes: 344257154
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:6ec1dced4cee8569c77817927938fa4341f939e0dddab511bc3ee8724d652ae2
      sizeBytes: 344257154
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:58a7511f549448f6f86280559069bc57f5c754877ebec69da5bbc7ad55e42162
      sizeBytes: 344201616
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:4e75c42518bb46376cfe0b4fbaa3da1d8f1cea99f706736f1b0b04a3ac554db2
      sizeBytes: 344201616
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:7f60a750d15cda9918e9172e529270ce78c670751d4027f6adc6bdc84ec2d884
      sizeBytes: 344201436
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:6fc25c08212652c7539caaf0f6d913d929f84c54767f20066657ce0f4e6a51e0
      sizeBytes: 344193424
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:4e93825950c831ce6d2b65c9a80921c8860035e39a4b384d38d40f7d2cb2a4ee
      sizeBytes: 344185232
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:842216399613774640a4605202d446cf61bd48ff20e12391a0239cbc6a8f2c77
      sizeBytes: 344185052
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:8ee2bb6fc5484373227b17e377fc226d8d19be11d38d6dbc304970bd46bc929b
      sizeBytes: 344159662
    - names:
        - gcr.io/nathanmittler-istio-test/app@sha256:e141f14e7d872dcf855e09eceb411dc427188d0617fd18d14139db4ca99d2d0b
        - gcr.io/nathanmittler-istio-test/app:latest
      sizeBytes: 315430434
    - names:
        - gcr.io/nathanmittler-istio-test/pilot@sha256:01ccc7cbb36d41a58aa7d8a44ff5d3a996541bb8b7af7c215d79d13528b313ab
        - gcr.io/nathanmittler-istio-test/pilot:latest
      sizeBytes: 308784363
  nodeInfo:
    architecture: amd64
    bootID: 8f772c7c-09eb-41eb-8bb5-76ef214eaaa1
    containerRuntimeVersion: docker://17.3.2
    kernelVersion: 4.14.65+
    kubeProxyVersion: v1.11.3-gke.18
    kubeletVersion: v1.11.3-gke.18
    machineID: f325f89cd295bdcda652fd40f0049e32
    operatingSystem: linux
    osImage: Container-Optimized OS from Google
    systemUUID: F325F89C-D295-BDCD-A652-FD40F0049E32
---
apiVersion: v1
kind: Node
metadata:
  annotations:
    container.googleapis.com/instance_id: "1656674321116487208"
    node.alpha.kubernetes.io/ttl: "0"
    volumes.kubernetes.io/controller-managed-attach-detach: "true"
  creationTimestamp: 2018-12-03T16:59:36Z
  labels:
    beta.kubernetes.io/arch: amd64
    beta.kubernetes.io/fluentd-ds-ready: "true"
    beta.kubernetes.io/instance-type: n1-standard-4
    beta.kubernetes.io/os: linux
    cloud.google.com/gke-nodepool: default-pool
    cloud.google.com/gke-os-distribution: cos
    failure-domain.beta.kubernetes.io/region: us-central1
    failure-domain.beta.kubernetes.io/zone: us-central1-a
    kubernetes.io/hostname: gke-istio-test-default-pool-866a0405-ftch
  name: gke-istio-test-default-pool-866a0405-ftch
  resourceVersion: "64030615"
  selfLink: /api/v1/nodes/gke-istio-test-default-pool-866a0405-ftch
  uid: d0cad69e-f71c-11e8-af4f-42010a800072
spec:
  podCIDR: 10.40.1.0/24
  providerID: gce://nathanmittler-istio-test/us-central1-a/gke-istio-test-default-pool-866a0405-ftch
status:
  addresses:
    - address: 10.128.0.5
      type: InternalIP
    - address: 35.192.33.12
      type: ExternalIP
    - address: gke-istio-test-default-pool-866a0405-ftch
      type: Hostname
  allocatable:
    cpu: 3920m
    ephemeral-storage: "47093746742"
    hugepages-2Mi: "0"
    memory: 12699980Ki
    pods: "110"
  capacity:
    cpu: "4"
    ephemeral-storage: 98868448Ki
    hugepages-2Mi: "0"
    memory: 15399244Ki
    pods: "110"
  conditions:
    - lastHeartbeatTime: 2019-01-30T17:34:22Z
      lastTransitionTime: 2018-12-03T17:04:22Z
      message: node is functioning properly
      reason: UnregisterNetDevice
      status: "False"
      type: FrequentUnregisterNetDevice
    - lastHeartbeatTime: 2019-01-30T17:34:22Z
      lastTransitionTime: 2018-12-03T16:59:20Z
      message: kernel has no deadlock
      reason: KernelHasNoDeadlock
      status: "False"
      type: KernelDeadlock
    - lastHeartbeatTime: 2018-12-03T16:59:46Z
      lastTransitionTime: 2018-12-03T16:59:46Z
      message: RouteController created a route
      reason: RouteCreated
      status: "False"
      type: NetworkUnavailable
    - lastHeartbeatTime: 2019-01-30T17:35:16Z
      lastTransitionTime: 2018-12-03T16:59:36Z
      message: kubelet has sufficient disk space available
      reason: KubeletHasSufficientDisk
      status: "False"
      type: OutOfDisk
    - lastHeartbeatTime: 2019-01-30T17:35:16Z
      lastTransitionTime: 2018-12-03T16:59:36Z
      message: kubelet has sufficient memory available
      reason: KubeletHasSufficientMemory
      status: "False"
      type: MemoryPressure
    - lastHeartbeatTime: 2019-01-30T17:35:16Z
      lastTransitionTime: 2018-12-03T16:59:36Z
      message: kubelet has no disk pressure
      reason: KubeletHasNoDiskPressure
      status: "False"
      type: DiskPressure
    - lastHeartbeatTime: 2019-01-30T17:35:16Z
      lastTransitionTime: 2018-12-03T16:59:36Z
      message: kubelet has sufficient PID available
      reason: KubeletHasSufficientPID
      status: "False"
      type: PIDPressure
    - lastHeartbeatTime: 2019-01-30T17:35:16Z
      lastTransitionTime: 2018-12-03T16:59:57Z
      message: kubelet is posting ready status. AppArmor enabled
      reason: KubeletReady
      status: "True"
      type: Ready
  daemonEndpoints:
    kubeletEndpoint:
      Port: 10250
  images:
    - names:
        - gcr.io/stackdriver-agents/stackdriver-logging-agent@sha256:a33f69d0034fdce835a1eb7df8a051ea74323f3fc30d911bbd2e3f2aef09fc93
        - gcr.io/stackdriver-agents/stackdriver-logging-agent:0.3-1.5.34-1-k8s-1
      sizeBytes: 554981103
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:23a52850819d5196d66e8e20f4f63f314f779716f830e1d109ad0e24b1f0df43
      sizeBytes: 446407220
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:9949bc22667ef88e54ae91700a64bf1459e8c14ed92b870b7ec2f630e14cf3c1
      sizeBytes: 446407220
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:e338c2c5cbc379db24c5b2d67a4acc9cca9a069c2927217fca0ce7cbc582d312
      sizeBytes: 446398900
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:039dbddf8498eff82b25b04cd35c81c4f3e350a1c34e1b128bb0199d6e7d4f98
        - gcr.io/nathanmittler-istio-test/proxyv2:latest
      sizeBytes: 368758526
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:cdd2f527b4bd392b533d2d0e62c257c19d5a35a6b5fc3512aa327c560866aec1
      sizeBytes: 344257154
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:6ec1dced4cee8569c77817927938fa4341f939e0dddab511bc3ee8724d652ae2
      sizeBytes: 344257154
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:9d502fd29961bc3464f7906ac0e86b07edf01cf4892352ef780e55b3525fb0b8
      sizeBytes: 344257154
    - names:
        - gcr.io/nathanmittler-istio-test/proxyv2@sha256:3f4115cd8c26a17f6bf8ea49f1ff5b875382bda5a6d46281c70c886e802666b0
      sizeBytes: 344257154
    - names:
        - gcr.io/nathanmittler-istio-test/app@sha256:e141f14e7d872dcf855e09eceb411dc427188d0617fd18d14139db4ca99d2d0b
        - gcr.io/nathanmittler-istio-test/app:latest
      sizeBytes: 315430434
    - names:
        - gcr.io/nathanmittler-istio-test/app@sha256:430bdea6c4c1447dff4e8d2e9632da5211529375c45a22722dcc1500da9b95dd
      sizeBytes: 291266578
    - names:
        - gcr.io/nathanmittler-istio-test/app@sha256:ffaa484f413d324047fe000fbcc90d9195da99b681feb7c2ce8ce38f71724aec
      sizeBytes: 291230128
    - names:
        - k8s.gcr.io/node-problem-detector@sha256:f95cab985c26b2f46e9bd43283e0bfa88860c14e0fb0649266babe8b65e9eb2b
        - k8s.gcr.io/node-problem-detector:v0.4.1
      sizeBytes: 286572743
    - names:
        - gcr.io/stackdriver-agents/stackdriver-logging-agent@sha256:441f6b6a118173ec3d17d5b0c1e74824fadad6d9f1aaa5cb08ae4338f314a06c
        - gcr.io/stackdriver-agents/stackdriver-logging-agent:0.5-1.5.36-1-k8s
      sizeBytes: 218848834
    - names:
        - k8s.gcr.io/fluentd-elasticsearch@sha256:b8c94527b489fb61d3d81ce5ad7f3ddbb7be71e9620a3a36e2bede2f2e487d73
        - k8s.gcr.io/fluentd-elasticsearch:v2.0.4
      sizeBytes: 135716379
    - names:
        - gcr.io/nathanmittler-istio-test/proxy_init@sha256:636193003388dbb67215ad58a8bae7f47a7ee7b378a0e80feb3301c82075f93e
        - gcr.io/nathanmittler-istio-test/proxy_init:latest
      sizeBytes: 118960405
    - names:
        - k8s.gcr.io/fluentd-gcp-scaler@sha256:bfd8ffbadf5cbfc7cd0944f5c13aaa8da421e3ab2322d610e64c4d7de9424c29
        - k8s.gcr.io/fluentd-gcp-scaler:0.3
      sizeBytes: 115128950
    - names:
        - gcr.io/google_containers/kube-proxy:v1.11.3-gke.18
        - k8s.gcr.io/kube-proxy:v1.11.3-gke.18
      sizeBytes: 102652198
    - names:
        - k8s.gcr.io/kubernetes-dashboard-amd64@sha256:dc4026c1b595435ef5527ca598e1e9c4343076926d7d62b365c44831395adbd0
        - k8s.gcr.io/kubernetes-dashboard-amd64:v1.8.3
      sizeBytes: 102319441
    - names:
        - k8s.gcr.io/prometheus-to-sd@sha256:6c0c742475363d537ff059136e5d5e4ab1f512ee0fd9b7ca42ea48bc309d1662
        - k8s.gcr.io/prometheus-to-sd:v0.3.1
      sizeBytes: 88077694
    - names:
        - k8s.gcr.io/kube-addon-manager@sha256:3519273916ba45cfc9b318448d4629819cb5fbccbb0822cce054dd8c1f68cb60
        - k8s.gcr.io/kube-addon-manager:v8.6
      sizeBytes: 78384272
    - names:
        - k8s.gcr.io/heapster-amd64@sha256:9fae0af136ce0cf4f88393b3670f7139ffc464692060c374d2ae748e13144521
        - k8s.gcr.io/heapster-amd64:v1.6.0-beta.1
      sizeBytes: 76016169
    - names:
        - gcr.io/nathanmittler-istio-test/mixer@sha256:f7f39c2aa2445f0eeb974e052495bea0b182054b87fb130929e3e3a11b89178c
        - gcr.io/nathanmittler-istio-test/mixer:latest
      sizeBytes: 67962964
    - names:
        - k8s.gcr.io/ingress-gce-glbc-amd64@sha256:31d36bbd9c44caffa135fc78cf0737266fcf25e3cf0cd1c2fcbfbc4f7309cc52
        - k8s.gcr.io/ingress-gce-glbc-amd64:v1.1.1
      sizeBytes: 67801919
    - names:
        - gcr.io/nathanmittler-istio-test/mixer@sha256:8b95223097646bca9ea8de2d410a55aba287868e458a34cd6b414b1cd53a994d
      sizeBytes: 67690667
  nodeInfo:
    architecture: amd64
    bootID: a4687372-7eb1-4a05-913d-2f5cb2d97194
    containerRuntimeVersion: docker://17.3.2
    kernelVersion: 4.14.65+
    kubeProxyVersion: v1.11.3-gke.18
    kubeletVersion: v1.11.3-gke.18
    machineID: e11072430320008f166ee8b71cc69999
    operatingSystem: linux
    osImage: Container-Optimized OS from Google
    systemUUID: E1107243-0320-008F-166E-E8B71CC69999
